--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "i18n-js": "^4.4.3",
+    "i18next": "^23.14.0",
     "material-symbols": "^0.22.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
