--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18n-js": "^4.4.3",
     "i18next": "^23.14.0",
     "material-symbols": "^0.22.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
